src/objects/Request_Buffer__c.object
<CustomObject>
    <fields>
        <fullName>Buffered_XML__c</fullName>
        <label>Buffered XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_Buffered__c</fullName>
        <label>Date / Time Buffered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request Buffer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RB-{DDMMYYYY}-{0000}</displayFormat>
        <label>Request Buffer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Buffers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>